# navichat

./: Cargo.toml
examples/: c01-chat.rs  c02-tool-calls.rs  c03-tool-responses.rs
src/: chat.rs  error.rs  gpts.rs  lib.rs  oa_client.rs
tests/: test.rs
