[package]
name = "navichat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-openai = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
rpc-router = "=0.1.3"
schemars = { version = "0.8"}
derive_more = { version = "1.0.0", features = ["from"] }
